Fix overlap issue
The pixel trail was not showing because it was not able to overlap the outer grid box. By setting the position of the grid to "relative", the absolute position of the pixels should overlap.

--- a/Etch.css
+++ b/Etch.css
@@ -13,6 +13,7 @@ h1 {
     display:flex;
     flex:1;
     flex-wrap: wrap;
+    position: relative;
     
 }
 
